sun-java6 (6.30-4) unstable; urgency=low

  * Fix lintian source package warnings

 -- Janusz Dziemidowicz <rraptorr@nails.eu.org>  Tue, 31 Jan 2012 06:37:37 +0100

sun-java6 (6.30-3) unstable; urgency=low

  * Detect Java version from changelog instead of directory name
  * Set proper (lower) priority for ia32-java-6-sun
  * Update link for JCE Unlimited Strength Jurisdiction Policy Files
  * Add Homepage to control file
  * Update list of common JRE things
  * Replace sun-java6-app.xpm with sun-java6.xpm

 -- Janusz Dziemidowicz <rraptorr@nails.eu.org>  Wed, 18 Jan 2012 13:45:07 +0100

sun-java6 (6.30-2) unstable; urgency=low

  * Remove libnss-mdns from Suggests
  * Generate classes.jsa, needed by class data sharing, for every architecture
    and mode
  * Remove ia64 support
  * Remove more obsolete code from rules

 -- Janusz Dziemidowicz <rraptorr@nails.eu.org>  Mon, 02 Jan 2012 17:54:34 +0100

sun-java6 (6.30-1) unstable; urgency=low

  * New upstream release
  * Remove DLJ related stuff
  * Remove various obsolete/commented stuff

 -- Janusz Dziemidowicz <rraptorr@nails.eu.org>  Sat, 24 Dec 2011 00:06:35 +0100

sun-java6 (6.26-3) unstable; urgency=low

  * "ia32-sun-java6-bin has improperly equal alternatives priority on amd64"
    fixed. Thanks to Todd Vierling for providing the patch (LP: #643658)

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 22 Jul 2011 23:22:17 +0200

sun-java6 (6.26-2) unstable; urgency=low

  * Move libnss-mdns to Suggests. Thanks to Arthur Gautier for investigating
    (Closes: #484316)

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 26 Aug 2011 11:33:19 +0200

sun-java6 (6.26-1) unstable; urgency=high

  * New upstream release (Closes: #629852)
  * SECURITY UPDATE: multiple upstream vulnerabilities. Upstream fixes:
    - (CVE-2011-0862): integer overflows in JPEGImageReader and font
                       SunLayoutEngine (2D, 7013519) 
    - (CVE-2011-0873): unspecified vulnerability fixed in 6u26 (2D) 