@@ -1,8 +1,9 @@
 sun-java6 (6.30-4) unstable; urgency=low
 
   * Fix lintian source package warnings
+  * Update debhelper compatibility level to 7
 
- -- Janusz Dziemidowicz <rraptorr@nails.eu.org>  Tue, 31 Jan 2012 06:37:37 +0100
+ -- Janusz Dziemidowicz <rraptorr@nails.eu.org>  Wed, 01 Feb 2012 20:21:32 +0000
 
 sun-java6 (6.30-3) unstable; urgency=low
 
